--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,14 +10,13 @@ activity-compose = "1.8.2"
 compose-bom = "2023.10.01"
 mvikotlin = "3.2.1"
 decompose = "2.2.2"
-dagger = "2.44"
+dagger = "2.48.1"
 ksp = "1.9.22-1.0.16"
 retrofit = "2.9.0"
 retrofit-converter = "1.0.0"
 okhttp = "4.12.0"
 room = "2.6.1"
 glide = "1.0.0-beta01"
-kotlin-serialization ="1.6.0"
 
 [libraries]
 core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "core-ktx" }
@@ -45,7 +44,7 @@ retrofit = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = 
 retrofit-gson = { group = "com.squareup.retrofit2", name = "converter-gson", version.ref = "retrofit" }
 okhttp = { group = "com.squareup.okhttp3", name = "okhttp", version.ref = "okhttp" }
 okhttp-logging = { group = "com.squareup.okhttp3", name = "logging-interceptor", version.ref = "okhttp" }
-room = { group = "androidx.room", name = "room-runtime", version.ref = "room" }
+room = { group = "androidx.room", name = "room-ktx", version.ref = "room" }
 room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "room" }
 glide = { group = "com.github.bumptech.glide", name = "compose", version.ref = "glide" }
 matirial-icons = { group = "androidx.compose.material", name = "material-icons-extended" }
